--- a/telegram_payment_bot/lang/lang_en.xml
+++ b/telegram_payment_bot/lang/lang_en.xml
@@ -112,7 +112,7 @@ Group: **{chat_title}**
     <!-- Remove no username command message (notice) -->
     <sentence id="REMOVE_NO_USERNAME_NOTICE_CMD">**USERNAME CHECK**
 Group: **{chat_title}**
-⌛ The members without username are going to be removed...</sentence>
+⏳ The members without username are going to be removed...</sentence>
     <!-- Remove no username command message (completed) -->
     <sentence id="REMOVE_NO_USERNAME_COMPLETED_CMD">✅ Operation completed.
 
@@ -141,7 +141,7 @@ Payment check on joined members is currently disabled.</sentence>
 
     <!-- Check payment data command message (notice) -->
     <sentence id="CHECK_PAYMENTS_DATA_NOTICE_CMD">**CHECK PAYMENTS DATA**
-⌛ Payments data is going to be checked...</sentence>
+⏳ Payments data is going to be checked...</sentence>
     <!-- Check payment data command message (completed) -->
     <sentence id="CHECK_PAYMENTS_DATA_COMPLETED_CMD">✅ Operation completed.
 
@@ -161,7 +161,7 @@ Found errors: {errors_count}</sentence>
     <!-- Email no payment command message (notice) -->
     <sentence id="EMAIL_NO_PAYMENT_NOTICE_CMD">**PAYMENTS REMINDER**
 Group: **{chat_title}**
-⌛ Members whose payment is about to expire are going to be notified via email...</sentence>
+⏳ Members whose payment is about to expire are going to be notified via email...</sentence>
     <!-- Email no payment command message (completed) -->
     <sentence id="EMAIL_NO_PAYMENT_COMPLETED_CMD">✅ Operation completed.
 
@@ -177,7 +177,7 @@ A reminder email has been sent to all members.</sentence>
     <!-- Check no payment command message (notice) -->
     <sentence id="CHECK_NO_PAYMENT_NOTICE_CMD">**PAYMENTS CHECK**
 Group: **{chat_title}**
-⌛ Members whose payment is about to expire are going to be checked...</sentence>
+⏳ Members whose payment is about to expire are going to be checked...</sentence>
     <!-- Check no payment command message (completed) -->
     <sentence id="CHECK_NO_PAYMENT_COMPLETED_CMD">✅ Operation completed.
 
@@ -199,7 +199,7 @@ Please pay within {last_day} or you'll be removed from the group.</sentence>
     <!-- Remove no payment command message (notice) -->
     <sentence id="REMOVE_NO_PAYMENT_NOTICE_CMD">**PAYMENTS CHECK**
 Group: **{chat_title}**
-⌛ Members whose payment is about to expire are going to be removed...</sentence>
+⏳ Members whose payment is about to expire are going to be removed...</sentence>
     <!-- Remove no payment command message (completed) -->
     <sentence id="REMOVE_NO_PAYMENT_COMPLETED_CMD">✅ Operation completed.
 
