--- a/telegram_payment_bot/lang/lang_en.xml
+++ b/telegram_payment_bot/lang/lang_en.xml
@@ -85,8 +85,9 @@ ID: {chat_id}</sentence>
     <!-- Users list command message -->
     <sentence id="USERS_LIST_CMD">**USERS LIST**
 Group: **{chat_title}**
-Users list:
-{users_list}</sentence>
+Members count: **{members_count}**
+Members list:
+{members_list}</sentence>
     <!-- Version command message -->
     <sentence id="VERSION_CMD">**Telegram Payment Bot**
 
